@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/astroid
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/astroid/ChangeLog,v 1.4 2014/05/08 09:37:17 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/astroid/ChangeLog,v 1.5 2014/07/31 03:53:15 idella4 Exp $
+
+*astroid-1.2.0 (31 Jul 2014)
+
+  31 Jul 2014; Ian Delaney <idella4@gentoo.org> +astroid-1.2.0.ebuild:
+  bump
 
 *astroid-1.1.1 (08 May 2014)
 
